# SpoolEase

./: .gitignore  .gitmodules  .lazy._lua  BambuLabs-Filament-V2.csv  README.md  build.rs  cargo.toml  deploy-fix-html.sh
.github/: copilot-instructions.md
.github/workflows/: pages.yml
_untracked/: nm_b_1.txt  nm_b_2.txt
_untrackes/: setting-id.txt
core/: .gitignore  Cargo.toml  boot-log.txt  build.rs  cargo.toml  deploy-beta.sh  deploy-debug-old.sh  deploy-debug.sh  deploy-rel.sh  deploy-shell-init.sh  deploy-vars.sh  gen-ota-certs.sh  gen-web-server-certs.sh  memory.x
core/.cargo/: config.toml
core/data/: Spool-Core-Weights.csv  filament-brands.csv  materials.csv
core/src/: app_config.rs  app_ota.rs  bambu.rs  bambu_api.rs  csvdb.rs  filament_staging.rs  main.rs  my_mqtt.rs  settings.rs  spool_record.rs  spool_scale.rs  ssdp.rs  store.rs  translations.rs  types.rs  view_model.rs  web_app.rs
core/src/bambu/: bambu_print.rs
core/src/certs/: bambulab_h2c.pem  simulator.pem
core/static/: config.html  spools.html.patch  styles.css
core/static/inventory/: index.html
core/translations/: de.json  en.json  es.json  nl.json  pl.json
core/ui/: app-settings.slint  app-widgets.slint  app.slint  appwindow.slint  common-operations.slint  controlpanel.slint  core-weight._slint  message-box.slint  new-tag-scan.slint  numpad.slint  ota.slint  scale-calibration.slint  select-printer.slint  slot-display.slint  spool-display.slint  spoolstaging.slint  staging-operations.slint  translations.slint  tray-operations.slint  trays.slint  utils.slint
core/ui/framework/: framework.slint  settings.slint  widgets.slint
data/: base-filaments-index.csv
docs/: flash.html  index.html  translate.js  translations-upload.html
docs/firmware/: manifest.json
shared/: Cargo.toml  gen-ota-certs.sh  gen-s3-amasonaws-certs.sh  rust-toolchain.toml
shared/.cargo/: config.toml
shared/src/: gcode_analysis.rs  gcode_analysis_task.rs  lib.rs  my_ftp.rs  ndef.rs  nfc.rs  pn532_ext.rs  scale.rs  settings.rs  spool_tag.rs  threemf_extractor.rs  types.rs  utils.rs
shared/src/certs/: bin.spoolease.io.info  raw.githubusercontent.com.info  s3.amazonaws.com.info  s3.amazonaws.com.pem  vmware-vsftpd.pem
src/: app.rs  app_config.rs  app_ota.rs  bambu.rs  bambu_api.rs  color_utils.rs  csvdb.rs  filament_staging.rs  gcode_analysis.rs  gcode_analysis_task.rs  main.rs  my_ftp.rs  my_mqtt.rs  settings.rs  spool_record.rs  spool_scale.rs  ssdp.rs  store.rs  view_model.rs  web_app.rs
src/bambu/: bambu_print.rs
static/: captive.html  config.html  encode.html  styles.css
ui/: app-settings.slint  app-widgets.slint  app.slint  appwindow.slint  controlpanel.slint  core-weight._slint  core-weight.slint  encode-editing.slint  filament-info._slint  filament-info.slint  new-tag-scan.slint  numpad.slint  select-inventory-id._slint  select-inventory-id.slint  slot-display.slint  spool-display.slint  spoolstaging.slint  staging-operations.slint  tray-operations.slint  trays.slint
ui/framework/: framework.slint  settings.slint  terminal.slint  widgets.slint
workers/translation-oauth/: index.js  package.json  wrangler.toml
workers/translation-oauth/.wrangler/cache/: wrangler-account.json
workers/translation-oauth/src/: index.js
