[package]
name = "shared"
version = "0.1.0"
edition = "2021"

[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
opt-level = 's'
lto = 'fat'
overflow-checks = false

[patch.crates-io]
bitvec = { git = "https://github.com/arctic-alpaca/ferrilab" }
radium = { git = "https://github.com/arctic-alpaca/ferrilab" }

[dependencies]
serde = { version = "1.0.213", default-features = false, features = [ "derive", "alloc", ] }
serde_json = { version = "1.0.132", default-features = false, features = [ "alloc", ] }
serde_with = { version = "3.16.0", default-features = false, features = ["alloc", "macros", "base64", "hashbrown_0_15", "hex"]}


framework = { package = "esp-hal-app-framework", git = "https://github.com/yanshay/esp-hal-app/", tag="0.5.0", default-features = false, features = ["esp32s3"] }
# framework = { package = "esp-hal-app-framework", path = "../../../esp-hal-app/esp-hal-app-framework/", default-features = false, features = ["esp32s3"] }
deku = { version = "0.17.0", default-features = false, features = ["alloc"] }
# pn532 = { git = "https://github.com/yanshay/pn532", branch ="yanshay_async_full", default-features = false }
pn532 = { path = "../../../../../../OpenSourceProj/forked/pn532/", default-features = false }
embassy-time = { version = "0.4.0", features = ["generic-queue-8"] }
embassy-net = { version = "0.6.0", features = ["raw", "tcp", "udp", "dhcpv4", "medium-ethernet", "multicast" ] }
esp-hal = { version = "0.23.1" }
embassy-sync = { version = "0.6.2" }
no_std_io = { version = "0.6.0", default-features = false, features = [ "alloc" ] }
log = { version = "0.4.22", features = ["serde"] }
static_cell = { version = "2.1", features = ["nightly"] }
base64 = { version = "0.22.1", default-features = false, features = ["alloc"] }
embassy-futures = { version = "0.1.1" }
embedded-hal-bus = { version = "0.2.0", features = ["async"] }
embassy-executor = { version = "0.7.0", features = ["nightly"] }
getrandom = { version = "0.2.15", features = ["custom"] }
hashbrown = { version = "0.15.0", features = ["serde"] }
snafu = { git = "https://github.com/shepmaster/snafu", rev = "aedc9db8c04a437b4c547efd4d73e9337fa43a4a", default-features = false, features = ["rust_1_81", "alloc"]} # , "backtraces-impl-backtrace-crate"]} 
# esp-mbedtls = { git = "https://github.com/esp-rs/esp-mbedtls.git", features = [ "async", "esp32s3" ], rev = "1806f8f622b08a9b54de91814eea13c6b3d9ff1c" }
esp-mbedtls = { git = "https://github.com/yanshay/esp-mbedtls.git", features = [ "async", "esp32s3" ], branch = "yanshay_reuse_session_esp-hal-0.23.1" }
esp-alloc = { version = "0.6.0" } # features = ["internal-heap-stats"] }
miniz_oxide = { version = "0.8.9", default-features = false }
url = {version = "2.5.4", default-features = false}
edge-nal-embassy = "0.5.0"
edge-nal = "0.5.0"
edge-http = "0.5.0"
embedded-io-async = { version = "0.6.1" }
serde-csv-core = "0.3.2"

# ndef-rs = { path = "../../../../../../OpenSourceProj/forked/ndef-rs/ndef", default-features = false}
ndef-rs = { git = "https://github.com/yanshay/ndef-rs" , branch = "yanshay_no_std", default-features = false}

# crypo for bambu/mifare
sha2 = { version = "0.10.8", default-features = false}
hmac = { version = "0.12.1", default-features = false}

[features]
default = ["esp32s3"]

esp32s3 = [
  "esp-hal/esp32s3",
]
